# tree-sitter-garnet

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-garnet.pc.in
bindings/c/tree_sitter/: tree-sitter-garnet.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_garnet/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGarnetTests/: TreeSitterGarnetTests.swift
queries/: highlights.scm  indent.scm
src/: grammar.json  node-types.json  parser.c
